force-app/main/default/objects/Activity/fields/Action__c.field-meta.xml
<CustomField>
    <fullName>Action__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Task action for systemic issue records</description>
    <label>Action</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Event new</fullName>
            </value>
            <value>
                <fullName>Event pre-existing</fullName>
            </value>
            <value>
                <fullName>No further action</fullName>
            </value>
            <value>
                <fullName>Reassign</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>