force-app/main/default/objects/Activity/fields/Action_Taken__c.field-meta.xml
<CustomField>
    <fullName>Action_Taken__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Non Personal Information;Source - Mobile</complianceGroup>
    <description>Action taken by Customer on the notification</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Action Taken</label>
    <length>255</length>
    <type>Text</type>
</CustomField>