force-app/main/default/objects/Activity/fields/Action_Taken_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Action_Taken_Date_Time__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Non Personal Information;Source - Mobile</complianceGroup>
    <description>Action taken date time by Customer on the notification</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Action Taken Date/Time</label>
    <type>DateTime</type>
</CustomField>