force-app/main/default/objects/Activity/fields/AI_Generated__c.field-meta.xml
<CustomField>
    <fullName>AI_Generated__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <defaultValue>false</defaultValue>
    <description>This flag is used to indicate whether the task has been created via AI.</description>
    <label>AI Generated</label>
    <type>Checkbox</type>
</CustomField>