force-app/main/default/objects/Activity/fields/Authentication_Method__c.field-meta.xml
<CustomField>
    <fullName>Authentication_Method__c</fullName>
    <complianceGroup>Integrity - Trusted;Source - Salesforce;Privacy - Non Personal Information</complianceGroup>
    <description>The method used to authenticate customer on the call</description>
    <label>Authentication Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Authenticated by Coach</fullName>
            </value>
            <value>
                <fullName>Customer cannot be authenticated</fullName>
            </value>
            <value>
                <fullName>Non Customer Call</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>