force-app/main/default/objects/Activity/fields/Call_Direction__c.field-meta.xml
<CustomField>
    <fullName>Call_Direction__c</fullName>
    <complianceGroup>Integrity_Trusted;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Indicates if the call being logged was Inbound or Outbound</description>
    <inlineHelpText>Indicates if the call being logged was Inbound or Outbound</inlineHelpText>
    <label>Call Direction</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Inbound</fullName>
            </value>
            <value>
                <fullName>Outbound</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>