force-app/main/default/objects/Activity/fields/Call_To_Action__c.field-meta.xml
<CustomField>
    <fullName>Call_To_Action__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Non Personal Information;Source - AEM</complianceGroup>
    <description>Used to store all available actions from AEM</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Call To Action</label>
    <length>255</length>
    <type>Text</type>
</CustomField>