force-app/main/default/objects/Activity/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Non Personal Information;Source - Salesforce</complianceGroup>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to Case for CMOS application. This field is created to bring related case data on task and utilize them to create formula fields</description>
    <inlineHelpText>Related case or complaint</inlineHelpText>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Activities</relationshipLabel>
    <relationshipName>Activities</relationshipName>
    <type>Lookup</type>
</CustomField>