force-app/main/default/objects/Activity/fields/Case_Age_in_Days__c.field-meta.xml
<CustomField>
    <fullName>Case_Age_in_Days__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Age of the case (in days) since e.g. it was first identified by ANZ.</description>
    <formula>Case__r.Case_Age_in_Days__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Age in Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>