force-app/main/default/objects/Activity/fields/Case_Created__c.field-meta.xml
<CustomField>
    <fullName>Case_Created__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Non Personal Information;Source - Salesforce</complianceGroup>
    <description>Date formula to capture date received</description>
    <formula>Case__r.IDR_Date_Received__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Date that orignal CMOS case was created</inlineHelpText>
    <label>Date Received</label>
    <type>Date</type>
</CustomField>