force-app/main/default/objects/Activity/fields/Case_Owner__c.field-meta.xml
<CustomField>
    <fullName>Case_Owner__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Non Personal Information;Source - Salesforce</complianceGroup>
    <description>Case Owner Name</description>
    <formula>IF(ISBLANK(Case__r.Owner:Queue.QueueName), Case__r.Owner:User.FirstName &amp; &quot; &quot; &amp; Case__r.Owner:User.LastName, Case__r.Owner:Queue.QueueName)</formula>
    <label>Case Owner</label>
    <type>Text</type>
</CustomField>