force-app/main/default/objects/Activity/fields/Cases_Related_To_Team__c.field-meta.xml
<CustomField>
    <fullName>Cases_Related_To_Team__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>To fetch tasks associated with Cases owned by Team</description>
    <formula>OR ( Case__r.Is_Owner_s_Line_Manager_Me__c ,  Case__r.IsOwner__c,  Owner:User.ManagerId = $User.Id ,  Owner:User.Id = $User.Id  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cases Related To Team</label>
    <type>Checkbox</type>
</CustomField>