force-app/main/default/objects/Activity/fields/Coach_Action__c.field-meta.xml
<CustomField>
    <fullName>Coach_Action__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Non Personal Information;Source - Pega CDH</complianceGroup>
    <description>Action for Coaches to execute on this task</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Coach Action</label>
    <type>TextArea</type>
</CustomField>