force-app/main/default/objects/Activity/fields/Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>Completed_Date__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Formula field to copy CompletedDateTime field value which will get updated when the status is changed to completed</description>
    <formula>DATEVALUE(CompletedDateTime)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Completed Date</label>
    <type>Date</type>
</CustomField>