force-app/main/default/objects/Activity/fields/CompletedDate__c.field-meta.xml
<CustomField>
    <fullName>CompletedDate__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Stamp the completed Date</description>
    <label>Completed Date</label>
    <type>Date</type>
</CustomField>