force-app/main/default/objects/Activity/fields/Customer_Name__c.field-meta.xml
<CustomField>
    <fullName>Customer_Name__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Personal Information;Source - Salesforce</complianceGroup>
    <description>To Display the Customer Name</description>
    <formula>IF(ISBLANK(Case__r.Account.MiddleName), Case__r.Account.FirstName + &quot; &quot; + Case__r.Account.LastName, Case__r.Account.FirstName + &quot; &quot; + Case__r.Account.MiddleName + &quot; &quot; + Case__r.Account.LastName)</formula>
    <label>Customer Name</label>
    <type>Text</type>
</CustomField>