force-app/main/default/objects/Activity/fields/Customer_Task_Configuration__c.field-meta.xml
<CustomField>
    <fullName>Customer_Task_Configuration__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Non Personal Information;Source - Salesforce</complianceGroup>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup Field To Customer Task Configuration</description>
    <label>Customer Task Configuration</label>
    <referenceTo>Customer_Task_Configuration__c</referenceTo>
    <relationshipLabel>Activities</relationshipLabel>
    <relationshipName>Activities</relationshipName>
    <type>Lookup</type>
</CustomField>