force-app/main/default/objects/Activity/fields/Customer_Task_Data__c.field-meta.xml
<CustomField>
    <fullName>Customer_Task_Data__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Non Personal Information;Source - Mobile</complianceGroup>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to &quot;Customer Task Data&quot;</description>
    <label>Customer Task Data</label>
    <referenceTo>Customer_Task_Data__c</referenceTo>
    <relationshipLabel>Activities</relationshipLabel>
    <relationshipName>Activities</relationshipName>
    <type>Lookup</type>
</CustomField>