force-app/main/default/objects/Activity/fields/Date_Case_on_Hold_From__c.field-meta.xml
<CustomField>
    <fullName>Date_Case_on_Hold_From__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Date field for user to capture the date when the case status was updated to &apos;On Hold&apos;</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Date Case on Hold From</label>
    <type>Date</type>
</CustomField>