force-app/main/default/objects/Activity/fields/Done__c.field-meta.xml
<CustomField>
    <fullName>Done__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <defaultValue>false</defaultValue>
    <description>Marks the completion of the task by the Settlement Officer/Lead</description>
    <label>Done</label>
    <type>Checkbox</type>
</CustomField>