force-app/main/default/objects/Activity/fields/Due_in_Days__c.field-meta.xml
<CustomField>
    <fullName>Due_in_Days__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Used in reporting to see a task is due in how many days</description>
    <formula>ActivityDate - TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Due in Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>