force-app/main/default/objects/Activity/fields/FinServ__NextSteps__c.field-meta.xml
<CustomField>
    <fullName>FinServ__NextSteps__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Notes about follow-up activities</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Next Steps</label>
    <type>TextArea</type>
</CustomField>