force-app/main/default/objects/Activity/fields/IDR_Collection_Number__c.field-meta.xml
<CustomField>
    <fullName>IDR_Collection_Number__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Sensitive_Personal_Information;Source_OCV</complianceGroup>
    <description>Backend field to store full account number of the customer which will be used in collections logic</description>
    <label>IDR Collection Number</label>
    <length>42</length>
    <type>Text</type>
</CustomField>