force-app/main/default/objects/Activity/fields/IDR_COR_ID__c.field-meta.xml
<CustomField>
    <fullName>IDR_COR_ID__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>free text field to enter COR event ID</description>
    <inlineHelpText>Reminder: If the issue meets the PSI definition, add the PSI Event tag and update the Customer Analysis Tab in NFR.</inlineHelpText>
    <label>Event ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>