force-app/main/default/objects/Activity/fields/IDR_Internal_or_External_Party__c.field-meta.xml
<CustomField>
    <fullName>IDR_Internal_or_External_Party__c</fullName>
    <complianceGroup>Source - Salesforce;Privacy - Non Personal Information;Integrity - Accurate</complianceGroup>
    <description>To determine whether a task is pending with External and or Internal Party</description>
    <label>Internal or External Party</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Internal (ANZ)</fullName>
            </value>
            <value>
                <fullName>External</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>