force-app/main/default/objects/Activity/fields/IDR_Is_Task_Completed_Within_Due_Dt__c.field-meta.xml
<CustomField>
    <fullName>IDR_Is_Task_Completed_Within_Due_Dt__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Check if the task is completed within due date</description>
    <formula>(ActivityDate  -  Completed_Date__c) &gt; 0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IDR Is Task Completed Within Due Dt</label>
    <type>Checkbox</type>
</CustomField>