force-app/main/default/objects/Activity/fields/IDR_Key_Business_Contact__c.field-meta.xml
<CustomField>
    <fullName>IDR_Key_Business_Contact__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy - Non Personal Information;Source - Salesforce</complianceGroup>
    <description>Key Business Contact</description>
    <label>Key Business Contact</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SI_Key_Business_Contacts</valueSetName>
    </valueSet>
</CustomField>