force-app/main/default/objects/Activity/fields/IDR_Key_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>IDR_Key_Contact_Name__c</fullName>
    <complianceGroup>Integrity - Trusted;Privacy - Personal Information;Source - Salesforce</complianceGroup>
    <description>Key contact name of the internal party does not have access to CMOS.</description>
    <inlineHelpText>Provide the key contact name of the internal or external party you&apos;re waiting on information from</inlineHelpText>
    <label>Key Contact Name</label>
    <length>60</length>
    <type>Text</type>
</CustomField>