force-app/main/default/objects/Activity/fields/IDR_Pend_Reason__c.field-meta.xml
<CustomField>
    <fullName>IDR_Pend_Reason__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Non Personal Information;Source - Salesforce</complianceGroup>
    <description>Reason why a case is pending</description>
    <label>On Hold Reason - External</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>IDR_Pended_To__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Awaiting information to be provided</fullName>
            </value>
            <value>
                <fullName>Awaiting allocation to AFCA case manager</fullName>
            </value>
            <value>
                <fullName>Awaiting determination</fullName>
            </value>
            <value>
                <fullName>Awaiting recommendation or preliminary view</fullName>
            </value>
            <value>
                <fullName>Other (please provide detail in Comments)</fullName>
            </value>
            <value>
                <fullName>Awaiting response on an offer made to customer</fullName>
            </value>
            <value>
                <fullName>Awaiting approval for proposed resolution</fullName>
            </value>
            <value>
                <fullName>Awaiting implementation of agreed outcome</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>