force-app/main/default/objects/Activity/fields/IDR_Pended_To__c.field-meta.xml
<CustomField>
    <fullName>IDR_Pended_To__c</fullName>
    <complianceGroup>Source_Salesforce;Privacy_Non_Personal_Information;Integrity_Accurate</complianceGroup>
    <description>exact party name a task is pending with</description>
    <label>Pended To</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AFCA</fullName>
            </value>
            <value>
                <fullName>Customer</fullName>
            </value>
            <value>
                <fullName>Internal Business Unit</fullName>
            </value>
            <value>
                <fullName>Nominated 3rd Party Representative of Customer</fullName>
            </value>
            <value>
                <fullName>Office of the Australian Information Commissioner (OAIC)</fullName>
            </value>
            <value>
                <fullName>Small Business Ombudsman</fullName>
            </value>
            <value>
                <fullName>State Tribunal</fullName>
            </value>
            <value>
                <fullName>Wealth Product Manufacturer: Allianz</fullName>
            </value>
            <value>
                <fullName>Wealth Product Manufacturer: IOOF</fullName>
            </value>
            <value>
                <fullName>Wealth Product Manufacturer: Netwealth</fullName>
            </value>
            <value>
                <fullName>Wealth Product Manufacturer: QBE</fullName>
            </value>
            <value>
                <fullName>Wealth Product Manufacturer: Zurich</fullName>
            </value>
            <value>
                <fullName>Wealth Product Manufacturer: Other</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>