force-app/main/default/objects/Activity/fields/IDR_Portfolio_or_Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>IDR_Portfolio_or_Business_Unit__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <inlineHelpText>If Internal Business Unit is selected as Pended to (Party), please select the Portfolio case is pending with.</inlineHelpText>
    <label>Portfolio or Business Unit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Business Owners (AR&amp;C)</fullName>
            </value>
            <value>
                <fullName>Commercial (AR&amp;C)</fullName>
            </value>
            <value>
                <fullName>Customer Resolution Portfolio (AR&amp;C)</fullName>
            </value>
            <value>
                <fullName>Customer Service Operations Portfolio (AR&amp;C)</fullName>
            </value>
            <value>
                <fullName>Data (Digital &amp; Transformation Australia)</fullName>
            </value>
            <value>
                <fullName>Digital Portfolio (AR&amp;C)</fullName>
            </value>
            <value>
                <fullName>Group Services (AR&amp;C)</fullName>
            </value>
            <value>
                <fullName>Home Owners Portfolio (AR&amp;C)</fullName>
            </value>
            <value>
                <fullName>Responsible Banking Portfolio (AR&amp;C)</fullName>
            </value>
            <value>
                <fullName>Retail (AR&amp;C)</fullName>
            </value>
            <value>
                <fullName>Wealth (AR&amp;C)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>