force-app/main/default/objects/Activity/fields/IDR_Review_Outcome__c.field-meta.xml
<CustomField>
    <fullName>IDR_Review_Outcome__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Non Personal Information;Source - Salesforce</complianceGroup>
    <description>This field is used to review correspondence tasks.</description>
    <inlineHelpText>Only applicable for New Correspondence Received on Closed Complaints. The &apos;Review Outcome&apos; field must be selected once additional correspondence has been reviewed and necessary action taken. The task cannot be marked as &apos;Completed&apos; until field is populated.</inlineHelpText>
    <label>Review Outcome</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No action required</fullName>
            </value>
            <value>
                <fullName>Actioned on closed complaint</fullName>
            </value>
            <value>
                <fullName>New complaint</fullName>
            </value>
            <value>
                <fullName>Reopened</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>