force-app/main/default/objects/Activity/fields/IDR_Team__c.field-meta.xml
<CustomField>
    <fullName>IDR_Team__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Non Personal Information;Source - Salesforce</complianceGroup>
    <description>Team details a task is pending with</description>
    <inlineHelpText>If Internal Business Unit selected as Pended to (Party), please select the team case is pending with</inlineHelpText>
    <label>Business Unit-1</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>IDR_Tribe__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>Private Banking</fullName>
            </value>
            <value>
                <fullName>Private Bank Advice &amp; Enablement</fullName>
            </value>
            <value>
                <fullName>Advice</fullName>
            </value>
            <value>
                <fullName>Advice Assurance</fullName>
            </value>
            <value>
                <fullName>Agribusiness</fullName>
            </value>
            <value>
                <fullName>Emerging Corporate</fullName>
            </value>
            <value>
                <fullName>Health</fullName>
            </value>
            <value>
                <fullName>Industry Specialisation</fullName>
            </value>
            <value>
                <fullName>Internal Business Development</fullName>
            </value>
            <value>
                <fullName>Property</fullName>
            </value>
            <value>
                <fullName>Early Resolution</fullName>
            </value>
            <value>
                <fullName>Internal Dispute Resolution (IDR)</fullName>
            </value>
            <value>
                <fullName>External Dispute Resolution (EDR)</fullName>
            </value>
            <value>
                <fullName>Specialised Resolution</fullName>
            </value>
            <value>
                <fullName>Customer Value</fullName>
            </value>
            <value>
                <fullName>Business Customer Solutions</fullName>
            </value>
            <value>
                <fullName>Home Loans</fullName>
            </value>
            <value>
                <fullName>Everyday Banking</fullName>
            </value>
            <value>
                <fullName>Regulatory Affairs</fullName>
            </value>
            <value>
                <fullName>Recoveries</fullName>
            </value>
            <value>
                <fullName>Settlements</fullName>
            </value>
            <value>
                <fullName>Assessment</fullName>
            </value>
            <value>
                <fullName>Customer Optimisation</fullName>
            </value>
            <value>
                <fullName>Customer Support</fullName>
            </value>
            <value>
                <fullName>Customer Settlement Enquiries</fullName>
            </value>
            <value>
                <fullName>Unsecured Lending</fullName>
            </value>
            <value>
                <fullName>Fraud Analytics</fullName>
            </value>
            <value>
                <fullName>Customer Protection Operations</fullName>
            </value>
            <value>
                <fullName>Complex Investigation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>