force-app/main/default/objects/Activity/fields/IDR_Tribe__c.field-meta.xml
<CustomField>
    <fullName>IDR_Tribe__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Tribe details a task is pending with.</description>
    <inlineHelpText>If Internal Business Unit selected as Pended to (Party), please select the Tribe case is pending with.</inlineHelpText>
    <label>Tribe or Segment</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>IDR_Portfolio_or_Business_Unit__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Business Lending Tribe</fullName>
            </value>
            <value>
                <fullName>Business Owner Engagement Tribe</fullName>
            </value>
            <value>
                <fullName>Digital Orientation &amp; Innovation Tribe</fullName>
            </value>
            <value>
                <fullName>Payments &amp; Merchants Tribe</fullName>
            </value>
            <value>
                <fullName>Business Banking</fullName>
            </value>
            <value>
                <fullName>Business Execution</fullName>
            </value>
            <value>
                <fullName>Commercial Broker</fullName>
            </value>
            <value>
                <fullName>Private Banking &amp; Advice (PB&amp;A)</fullName>
            </value>
            <value>
                <fullName>Risk Engagement</fullName>
            </value>
            <value>
                <fullName>Small Business Banking</fullName>
            </value>
            <value>
                <fullName>Specialised Distribution</fullName>
            </value>
            <value>
                <fullName>Specialist Product Sales</fullName>
            </value>
            <value>
                <fullName>Accessibility</fullName>
            </value>
            <value>
                <fullName>Complaint Resolution</fullName>
            </value>
            <value>
                <fullName>Complaint Transformation</fullName>
            </value>
            <value>
                <fullName>Complaints Insights</fullName>
            </value>
            <value>
                <fullName>Customer Advocate</fullName>
            </value>
            <value>
                <fullName>Portfolio Performance</fullName>
            </value>
            <value>
                <fullName>Project Augur</fullName>
            </value>
            <value>
                <fullName>Systemic Issues</fullName>
            </value>
            <value>
                <fullName>Business Governance</fullName>
            </value>
            <value>
                <fullName>Business Owners</fullName>
            </value>
            <value>
                <fullName>Customer Collections &amp; Service Centre</fullName>
            </value>
            <value>
                <fullName>Retail Customer Lending</fullName>
            </value>
            <value>
                <fullName>Customer Protection</fullName>
            </value>
            <value>
                <fullName>Customer Servicing</fullName>
            </value>
            <value>
                <fullName>Hardship and Vulnerable Customers</fullName>
            </value>
            <value>
                <fullName>Home Owners &amp; Service Centres</fullName>
            </value>
            <value>
                <fullName>Performance</fullName>
            </value>
            <value>
                <fullName>Retail Credit Control &amp; Quality</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>