force-app/main/default/objects/Activity/fields/Interaction_Owner__c.field-meta.xml
<CustomField>
    <fullName>Interaction_Owner__c</fullName>
    <complianceGroup>Integrity_Trusted;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Related Cases&apos;s owner of the Quality Assessment</description>
    <inlineHelpText>Related Cases&apos;s owner of the Quality Assessment</inlineHelpText>
    <label>Interaction Owner</label>
    <length>255</length>
    <type>Text</type>
</CustomField>