force-app/main/default/objects/Activity/fields/Is_Case_Owned_By_CR_Team__c.field-meta.xml
<CustomField>
    <fullName>Is_Case_Owned_By_CR_Team__c</fullName>
    <complianceGroup>Integrity_Trusted;Privacy_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Checks whether the case is owned by Customer Resolution Team or not</description>
    <formula>Case__r.Owner:User.UserRole.Name = &apos;Custommer_Resolution&apos; ||
Case__r.Owner:User.UserRole.Name = &apos;Customer_Resolution_Team_Leaders&apos; ||
Case__r.Owner:User.UserRole.Name = &apos;Customer_Resolution_Leadership&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Case Owned By CR Team</label>
    <type>Checkbox</type>
</CustomField>