force-app/main/default/objects/Activity/fields/Last_Assigned_Owner__c.field-meta.xml
<CustomField>
    <fullName>Last_Assigned_Owner__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is used to restore the owner of task when parent record owner changes</description>
    <label>Last Assigned Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Activities</relationshipName>
    <type>Lookup</type>
</CustomField>